@startuml

class RuleEngine {
    +makeMove()
    +getEvent()
}

class GameMaster {
    -gameID: UUID
    +makeMove()
    +getEvent()
    +getBoardCopy()
    +startGame()
    +pauseGame()
    +resumeGame()
    +registerPlayer()
}
class Board {
    -board: gamePiece[8][8]
    +getCell()
    +getBoardCopy()
    +movePiece()
}
class Prison {
    -Pieces: LinkedList
    +putInPrison()
    +getPieces()
}
class Cell{
    -row: int
    -col: int
    +getRow()
    +getCol()
}

class GamePiece{
    +isWhite: boolean
    +isWhite()
    +{abstract} isMoveValid()
}
class Knight{
}
class Queen{
}
class King{
}
class Bishop{
}
class Rook{
}
class Pawn{
}
GameMaster o-- RuleEngine 
GameMaster o-- Board
GameMaster o-- GamePiece

Board *-- Prison
Board o-- GamePiece

GamePiece <|-- Pawn
GamePiece <|-- Knight
GamePiece <|-- Rook
GamePiece <|-- Bishop
GamePiece <|-- Queen
GamePiece <|--- King
GamePiece o-- Prison
@enduml
